traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:13: error: ':' expected but ',' found.
  def changercolonne(x,y){
                      ^TraversalZigZag:23: error: identifier expected but '}' found.
}
^